syntax = "proto3";

package protoPay;

option go_package = "./;proto";

service PaymentService {
    rpc NewPayment(PaymentRequest) returns (PaymentResponse){};
}

message PaymentRequest {
    string orderId = 1;
    PaymentDataProduct product = 2;
}

message PaymentResponse {
    int32 status = 1;
    string message = 2;
}

message PaymentDataProduct {
    string name = 1;
    string color = 2;
    int32 quantity = 3;
}